# OnePlayer

./: .gitignore  README.md  build.gradle  constants.gradle  core_settings.gradle  publish.gradle  settings.gradle  versions.gradle
demos/mobile/: build.gradle
demos/mobile/src/main/: AndroidManifest.xml
demos/mobile/src/main/assets/: video.json
demos/mobile/src/main/res/layout/: activity_main.xml
demos/mobile/src/main/res/values/: strings.xml  styles.xml
demos/mobile/src/main/res/xml/: network_security_config.xml
demos/tv/: build.gradle
demos/tv/src/main/: AndroidManifest.xml
demos/tv/src/main/res/layout/: activity_details.xml  activity_main.xml
demos/tv/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
player/all/: build.gradle
player/all/src/main/: AndroidManifest.xml
player/all/src/main/java/com/coopsrc/oneplayer/: PlayerFactory.java
player/base/: build.gradle
player/base/src/main/: AndroidManifest.xml
player/base/src/main/java/com/coopsrc/oneplayer/core/: AbsOnePlayer.java  ControlDispatcher.java  DefaultControlDispatcher.java  EventListenerHolder.java  IOnePlayer.java  IPlayerInfo.java  IPlayerSurface.java  MediaPlayerProxy.java  OneExecutors.java  OnePlayer.java  PlaybackPreparer.java  PlayerLibraryInfo.java
player/core/: build.gradle
player/core/src/main/: AndroidManifest.xml
player/core/src/main/java/com/coopsrc/oneplayer/core/: AbsOnePlayer.java  AbsPlayer.java  EventListenerHolder.java  IOnePlayer.java  IPlayer.java  MediaPlayerProxy.java  OneCore.java
player/exo/: build.gradle
player/exo/src/main/: AndroidManifest.xml
player/exo/src/main/java/com/coopsrc/oneplayer/exo/: EventLogger.java  OneExo.java  OneExoPlayer.java
player/exo2/: build.gradle
player/exo2/src/main/: AndroidManifest.xml
player/exo2/src/main/res/values/: strings.xml
player/ffmedia/: CMakeLists.txt  build.gradle
player/ffmedia/src/main/: AndroidManifest.xml
player/ffmedia/src/main/cpp/: oneplayer.cpp
player/ffmedia/src/main/res/values/: strings.xml
player/ijkmedia/: build.gradle
player/ijkmedia/src/main/: AndroidManifest.xml
player/ijkmedia/src/main/res/values/: strings.xml
player/media/: build.gradle
player/media/src/main/: AndroidManifest.xml
player/media2/: build.gradle
player/media2/src/main/: AndroidManifest.xml
player/media2/src/main/res/values/: strings.xml
player/mercury/: CMakeLists.txt  build-android-ffmpeg.sh  build-android-openssl.sh  build.gradle
player/mercury/src/main/: AndroidManifest.xml
player/mercury/src/main/cpp/: mercury_player.cpp  oneplayer.cpp
player/mercury/src/main/cpp/mercury/include/: logger.h  mercury_ffmpeg.h  mercury_player.h
player/mercury/src/main/cpp/mercury/includes/: audio_channel.h  base_channel.h  logger.h  mercury_bridge.h  mercury_config.h  mercury_player.h  safe_queue.h  video_channel.h
player/mercury/src/main/cpp/mercury/src/: audio_channel.cpp  base_channel.cpp  mercury_bridge.cpp  mercury_control.cpp  mercury_ffmpeg.cpp  mercury_player.cpp  safe_queue.cpp  video_channel.cpp
player/mercury/src/main/java/com/coopsrc/oneplayer/kernel/ffmedia/: OneMercuryPlayer.java
player/mercury/src/main/java/com/coopsrc/oneplayer/kernel/mercury/: FFmpegConfig.java  IMercuryPlayer.java  MercuryPlayer.java  OneMercuryPlayer.java
player/ui/: build.gradle
player/ui/src/main/: AndroidManifest.xml
player/ui/src/main/res/anim/: player_seekbar_thumb_pressed_to_unpressed_thumb_animation.xml  player_seekbar_thumb_unpressed_to_pressed_thumb_0_animation.xml
player/ui/src/main/res/drawable/: player_menu_bar_background.xml  player_progress_bar_background.xml  player_seekbar_progress_drawable.xml  player_seekbar_thumb.xml  player_seekbar_thumb_pressed_to_unpressed.xml  player_seekbar_thumb_pressed_to_unpressed_animation.xml  player_seekbar_thumb_unpressed_to_pressed.xml  player_seekbar_thumb_unpressed_to_pressed_animation.xml
player/ui/src/main/res/drawable-v21/: ic_expand_more_white_24dp.xml  ic_fast_forward_white_24dp.xml  ic_fast_rewind_white_24dp.xml  ic_music_video_white_24dp.xml  ic_repeat_white_24dp.xml  ic_screen_rotation_white_24dp.xml  ic_shuffle_white_24dp.xml
player/ui/src/main/res/layout/: exo_simple_player_view.xml  layout_playback_control_view.xml  layout_player_control_view.xml  layout_player_view.xml
player/ui/src/main/res/values/: attrs.xml  attrs_time_bar.xml  attrs_video_control_view.xml  attrs_video_view.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
(+107 files in other folders)
